Thu Apr  7 11:10:38 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c: applied patch gamin_inotify_recursive2 from
	  Andrei Lahun provided on bug #171201

Tue Apr  5 16:48:31 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: found a problem when demonitoring a directory
	  which is the child of a monitored directory related to #172596
	* python/tests/Makefile.am python/tests/dnotify8.py
	  python/tests/dnotify9.py: added a couple of regression tests for this

Mon Apr  4 13:47:57 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: applied patch from Nickolay Shmyrev to fix
	  a problem on unreadable directories.
	  Seems to break python/tests/dnotify4.py though ... need more checking.
	* python/tests/Makefile.am python/tests/readonly.py
	  tests/testing.c tests/result/11 tests/scenario/11.tst: also 
	  included the regression tests for the feature

Sun Apr  3 17:35:37 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c: applied patch from Todor Penev to fix a
	  problem on the inotify back-end

Sat Apr  2 17:41:15 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in server/Makefile.am server/gam_channel.c
	  server/gam_kqueue.c server/gam_kqueue.h server/gam_server.c:
	  applied patch from Joe Marcus Clarke, adding a kqueue based
	  kernel backend for the BSD abd MacOS X platforms.

Wed Mar 30 12:55:38 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* gamin.pc.in: removing the Requires: glib-2.0 gthread-2.0 per
	  Red Hat bug #152486

Tue Mar 29 08:16:55 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* tests/Makefile.am: cleanup result files left from make tests

Fri Mar 25 11:04:16 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in libgamin/gam_api.c server/gam_channel.c: bug fixes
	  and portability patches from Joe Marcus Clarke when porting to
	  FreeBSD.

Wed Mar 23 16:16:38 CET 2005 Daniel Veillard <veillard@redhat.com>
